fixes #7104 - fixing overflow jankyness for a quirky browser. tested ie6 + 7, and regression check in ff3 + safari 3.1
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14239 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -856,6 +856,10 @@ img.dijitColorPaletteUnder {
 	overflow: auto;
 }
 
+/* #7104 - workaround IE jankyness with overflows */
+.dj_ie .dijitAccordionBody {
+	position:relative;
+}
 
 .dijitAccordionContainer {
 	border:1px solid #b7b7b7;
